# anthesis-challenge

./: .env.docker  .gitignore  README.docker.md  README.md  docker-compose.dev.yml  docker-compose.yml  pyproject.toml
enviromental-front/: .dockerignore  CLAUDE.md  Dockerfile  README.md  angular.json  karma.conf.js  package-lock.json  package.json
enviromental-front/src/: index.html  styles.css
enviromental-front/src/app/: app.config.ts  app.css  app.html  app.routes.server.ts  app.routes.ts  app.ts
enviromental-front/src/app/components/dashboard/: dashboard.component.css  dashboard.component.html  dashboard.component.ts
enviromental-front/src/app/components/emission-form/: emission-form.component.css  emission-form.component.html  emission-form.component.ts
enviromental-front/src/app/components/emissions-list/: emissions-list.component.css  (+3 more)
enviromental-front/src/app/models/: emission.model.ts
enviromental-front/src/app/services/: emissions.service.ts
enviromental-front/src/app/store/: emissions.store.ts
enviromental-front/src/app/utils/: country-coordinates.ts
enviromental-front/src/environments/: environment.development.ts  environment.ts
environmental_back/: .dockerignore  .env.example  CLAUDE.md  Dockerfile  README.md  manage.py
environmental_back/emissions/: admin.py  filters.py  models.py  serializers.py  urls.py  views.py
environmental_back/emissions/migrations/: 0001_initial.py
environmental_back/emissions/tests/: __init__.py  test_views.py
environmental_back/environmental_back/: asgi.py  settings.py  urls.py  wsgi.py
(+11 files in other folders)
